# parabola-swisseph

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  PATCHLICENSE  PATCHLICENSE.txt  README.md  aliaserwithdigits.sh  build.sh  cmake_install.cmake  headers-aliaser.sh  parabola-swephexp.h  parabola_benchmark  parabola_tester  parabola_tester.cpp  parabola_tuner  parabola_wrapper  parabola_wrapper.cpp  parabola_wrapper.h  swemini  sweph_alias.h  swephexp.h  swetest  swetests  swevents  swevid_loader.cpp  swevid_loader.h  threadcount.h
headerspatch/: sweph_alias.h
